--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 bitfield = "0.14.0"
 byteorder = "1.4"
 bytes = "1.4"
+enum_dispatch = "0.3"
 num-traits = "0.2"
 num-derive = "0.3"
 rand = "0.8"
