--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ num-traits = "0.2"
 num-derive = "0.3"
 rand = "0.8"
 tokio = {version = "1.28", features = ["rt", "rt-multi-thread", "net", "macros"]}
+itertools = "0.10.5"
