--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,12 @@ enum_dispatch = "0.3"
 num-traits = "0.2"
 num-derive = "0.3"
 rand = "0.8"
-tokio = {version = "1.28", features = ["rt", "rt-multi-thread", "net", "macros"]}
+tokio = { version = "1.28", features = [
+    "rt",
+    "rt-multi-thread",
+    "net",
+    "macros",
+] }
 itertools = "0.10.5"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
