--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,6 @@ bitfield = "0.14.0"
 byteorder = "1.4"
 bytes = "1.4"
 enum_dispatch = "0.3"
-num-traits = "0.2"
-num-derive = "0.3"
 rand = "0.8"
 tokio = { version = "1.28", features = [
     "rt",
@@ -23,4 +21,4 @@ tokio = { version = "1.28", features = [
 itertools = "0.10.5"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
-indexmap = "1.9.3"
+derivative = "2.2.0"
