--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ bitfield = "0.14.0"
 byteorder = "1.4"
 bytes = "1.4"
 enum_dispatch = "0.3"
+enum-filter = {path = "../enum-filter"}
 rand = "0.8"
 tokio = { version = "1.28", features = [
     "rt",
